--- a/utbanweek2.html
+++ b/utbanweek2.html
@@ -14,6 +14,6 @@
         <li> Mac </li>
     </ol>
     <h2 style="border: chartreuse;"> For More </h2>
-   
+    <a href="https://myshop.pk/laptops-desktops-computers/laptops"> Click Here </a>
 </body>
 </html>
