--- a/utbanweek2.html
+++ b/utbanweek2.html
@@ -5,15 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Laptop shop </title>
 </head>
-<body>
+<body style="background-color: blanchedalmond;">
     <h1> Laptop Shop </h1>
-    <ol style="font-size: 20px;">
-        <li> dell </li>
-        <li> hp </li>
+    <ol style="font-size: 20px; color: blue; background-color: rgb(238, 221, 221);">
+        <li> Dell </li>
+        <li> Hp </li>
         <li> Lenovo </li>
         <li> Mac </li>
     </ol>
-    <h2 style="border: chartreuse;"> For More </h2>
-    <a href="https://myshop.pk/laptops-desktops-computers/laptops"> Click Here </a>
+    <ul style="font-size: 20px; color: blue; background-color: rgb(245, 240, 240);">
+        <li> Home  </li>
+        <li> Contact </li>
+        <li> Gallary </li>
+    </ul>
+    <h2 style="font-size: 25px; background-color: blanchedalmond;"> For More </h2>
+    <a href="https://myshop.pk/laptops-desktops-computers/laptops" target="_blank"> Click Here </a>
+<h2 style="color: black; background-color: azure;"> Photos </h2>
+<img src="https://myshop.pk/pub/media/catalog/product/cache/badc1d10053babad93ba2ef2941284a4/_/d/_dell_vostro_-myshop-pk-3_-_copy_3.jpg" width="100" height="150">
+<img src="https://myshop.pk/pub/media/catalog/product/cache/badc1d10053babad93ba2ef2941284a4/l/e/lenovo_myshop-pk-2_3.jpg" width="100" height="150">
+<img src="https://myshop.pk/pub/media/catalog/product/cache/badc1d10053babad93ba2ef2941284a4/_/d/_deli_-myshop-pk-2_2.jpg" width="100" height="150">
+,<img src="https://myshop.pk/pub/media/catalog/product/cache/badc1d10053babad93ba2ef2941284a4/_/a/_apple-macbook-air-m2_-myshop-pk-1_4.jpg" width="100" height="150">
 </body>
 </html>
