--- a/utbanweek2.html
+++ b/utbanweek2.html
@@ -24,6 +24,60 @@
 <img src="https://myshop.pk/pub/media/catalog/product/cache/badc1d10053babad93ba2ef2941284a4/_/d/_dell_vostro_-myshop-pk-3_-_copy_3.jpg" width="100" height="150">
 <img src="https://myshop.pk/pub/media/catalog/product/cache/badc1d10053babad93ba2ef2941284a4/l/e/lenovo_myshop-pk-2_3.jpg" width="100" height="150">
 <img src="https://myshop.pk/pub/media/catalog/product/cache/badc1d10053babad93ba2ef2941284a4/_/d/_deli_-myshop-pk-2_2.jpg" width="100" height="150">
-,<img src="https://myshop.pk/pub/media/catalog/product/cache/badc1d10053babad93ba2ef2941284a4/_/a/_apple-macbook-air-m2_-myshop-pk-1_4.jpg" width="100" height="150">
+<img src="https://myshop.pk/pub/media/catalog/product/cache/badc1d10053babad93ba2ef2941284a4/_/a/_apple-macbook-air-m2_-myshop-pk-1_4.jpg" width="100" height="150">
+<table border="1px" border="color: red">
+    <tr>
+        <th> Category </th>
+        <th> core </th>
+        <th> Genration </th>
+        <th> Ram </th>
+        <th> Hard </th>
+        <th> Battery Time </th>
+        <th> Drive </th>
+        <th> Price </th>
+    </tr>
+    <tr>
+        <td> DELL </td>
+        <td> i5 </td>
+        <td> 6 </td>
+        <td> 8 </td>
+        <td> 256SSD </td>
+        <td> 2 Hour </td>
+        <td> Touch </td>
+        <td> 56,000 </td>
+        </tr>
+        <tr>
+            <td> Hp </td>
+            <td> i7 </td>
+            <td> 5 </td>
+            <td> 8 </td>
+            <td> 128SSD </td>
+            <td> 1 Hour </td>
+            <td> Keypad </td>
+            <td> 45,000 </td>
+        </tr>
+        <tr>
+            <td> Lenovo </td>
+            <td> i4 </td>
+            <td> 8 </td>
+            <td> 6 </td>
+            <td> 64SSD </td>
+            <td> 1 Hour </td>
+            <td> keypad </td>
+            <td> 40,000</td>
+        </tr>
+        <tr>
+            <td> Mac </td>
+            <td> Air </td>
+            <td> / </td>
+            <td> / </td>
+            <td> 256SSD </td>
+            <td> 2 Hour </td>
+            <td> keypad </td>
+            <td> 99,000 </td>
+        </tr>
+</table>
+<h2 style="background-color: aqua;"> For More Visit Our Website </h2>
+<a href="https://myshop.pk/laptops-desktops-computers/laptops" target="_blank"> Buy Now </a>
 </body>
 </html>
